--- a/app/src/Styles/style.css
+++ b/app/src/Styles/style.css
@@ -6,6 +6,14 @@ body {
   font-size: 30px;
 }
 
+.shift {
+  margin-left: 7px;
+}
+
 .shadow {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.border-bottom {
+   border: 1px solid black;
 }
